# QuantumCylinder

./: .gitignore  .hermes.md  1.py  README.md  pyproject.toml  requirements.txt  양자정보경진대회.ipynb
.github/: pull_request_template.md
configs/: baseline.json  problem_1_2_baseline.json
docs/: 00_problem_brief.md  00_team_dashboard.md  01_team_roles.md  02_roadmap.md  03_experiment_protocol.md  04_extension_ideas.md  05_hackathon_execution_plan.md  06_paper_triage.md  07_problem_1_2_solution.md  08_test_environment.md  09_qiskit_validation_layer.md  10_llm_development_guide.md  11_problem_3_continuous_denoising.md  12_hermes_agent_setup.md  13_automation_feedback_loop.md  14_problem_1_2_requirement_report.md  14_team_problem_status.md  15_quantitative_evaluation_plan.md  16_three_day_roadmap.md  17_problem_1_2_code_reading_guide.md  18_day2_finalist_strategy.md  18_problem_1_2_notebook_completion_plan.md  19_problem_3_finalist_autopilot.md  20_problem_3_support_worker.md  21_problem_3_harvest_summary.md  22_overnight_problem_3_evidence_handoff.md  23_problem_3_actor_critic_handoff.md  24_problem_3_method_portfolio.md  25_mentor_feedback_brief.md  26_problem_3b_to_3c_storyline.md  IBM_QPU_PROBLEM3B_BASIS_SWEEP.md  IBM_QPU_VALIDATION.md  github_issue_plan.json  problem3_measurement_basis_explainer.md
notebooks/: problem_1_2_metric_aligned_latest.ipynb
scripts/: bootstrap_problem_3_support_worker.ps1  copy_ibm_qpu_results_to_usb.py  create_solution_haar_baseline.py  ibm_qpu_extract_p3b_counts.py  invoke_hermes_task.ps1  problem_1_2_generate_requirement_report.py  (+29 more)
(+288 files in other folders)
